--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
   window.onload = function() {
     // Begin Swagger UI call region
     const ui = SwaggerUIBundle({
-      url: "https://petstore.swagger.io/v2/swagger.json",
+      url: "http://s.grpc-swagger.tk:8080/v2/api-docs?service=io.grpc.grpcswagger.showcase.HelloService",
       dom_id: '#swagger-ui',
       deepLinking: true,
       presets: [
