--- a/service.html
+++ b/service.html
@@ -75,15 +75,14 @@
             <h2>Server base url</h2>
             <div class="form">
                 <div class="flex-left units-gap">
-                    <div class="unit"><input type="text" placeholder="server base url" id="server-base-url"
-                                             value="http://localhost:8080"></div>
+                    <div class="unit"><input type="text" placeholder="server base url" id="server-base-url"></div>
                 </div>
             </div>
 
-            <h2>Service Discovery</h2>
+            <h2>Endpoint Register</h2>
             <div class="form">
                 <div class="flex-left units-gap">
-                    <div class="unit"><input type="text" placeholder="host:port" id="endpoint" value="localhost:12347"></div>
+                    <div class="unit"><input type="text" placeholder="host:port" id="endpoint"></div>
                 </div>
                 <div class="flex-left units-gap">
                     <div class="unit"><input type="text" placeholder="group name (optional)" id="group-name"></div>
