--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   window.onload = function() {
     // Begin Swagger UI call region
     const ui = SwaggerUIBundle({
-      url: "http://s.grpcs.top:18001/v2/api-docs?service=io.grpc.grpcswagger.showcase.HelloService",
+      url: "",
       dom_id: '#swagger-ui',
       deepLinking: true,
       presets: [
