--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   window.onload = function() {
     // Begin Swagger UI call region
     const ui = SwaggerUIBundle({
-      url: "",
+      url: "http://xxx/v2/api-docs?service=xxx",
       dom_id: '#swagger-ui',
       deepLinking: true,
       presets: [
